[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-exporter"
version = "0.1.0"
description = "A prometheus exporter for tracking PlayStation and Steam game activity."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.23.1",
    "psnawp>=3.0.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
]


[project.scripts]
game-exporter = "game_exporter.cli:app"

[dependency-groups]
dev = [
    "pipreqs>=0.5.0",
    "ruff>=0.13.3",
]
